SOLR-12522: forbidden api